# bigbit.rs

./: .gitignore  Cargo.toml  README.md  README.tpl
.github/workflows/: rust.yml
src/: extheadbyte.rs  headbyte.rs  lib.rs  linkedbytes.rs  tables.rs  tests.rs  traits.rs
src/extheadbyte/: mod.rs
src/headbyte/: mod.rs
src/headbyte/ops/: mod.rs
src/linkedbytes/: mod.rs
src/linkedbytes/lbstring/: mod.rs
src/linkedbytes/lbstring/ops/: cmp.rs  into.rs  mod.rs
src/linkedbytes/ops/: add.rs  div.rs  fmt.rs  from.rs  gcd.rs  mod.rs  mul.rs  sub.rs  tryinto.rs
src/ops/: linkedbytes.rs  mod.rs
src/ops/lbstring/: from.rs
src/ops/linkedbytes/: add.rs  div.rs  from.rs  mod.rs  sub.rs  tryinto.rs
