[package]
name = "bigbit"
version = "0.0.8"
authors = ["Kotauskas <v.toncharov@gmail.com>"]
edition = "2018"
description = "Implements the BigBit format, allowing for compact storage of arbitrarily large numbers."
readme = "README.md"
license = "Zlib"
keywords = ["bigbit", "bytebit", "bignum", "gmp", "num"]
categories = ["algorithms", "encoding", "mathematics", "no-std", "parser-implementations"]
repository = "https://github.com/kotauskas/bigbit.rs"
documentation = "https://docs.rs/bigbit/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.num-traits]
version = "0.2"
optional = true

[features]
default = ["num_traits", "std", "clippy"]
num_traits = ["num-traits"]
std = []
clippy = []